# tb-fitgirl

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  flake.nix  goals.md  pyproject.toml
.github/workflows/: release.yml
gui/: .gitignore  README.md  analysis_options.yaml  pubspec.lock.json  pubspec.yaml
gui/lib/: bridge.dart  keyring.dart  main.dart  models.dart
gui/lib/screens/: home_screen.dart  install_screen.dart  library_screen.dart  settings_screen.dart  setup_screen.dart
gui/linux/: CMakeLists.txt  tbfg_gui.desktop
gui/linux/runner/: my_application.cc
gui/test/: widget_test.dart
packaging/appimage/: AppRun  Dockerfile  pgrp-exec.c  tbfg_gui.desktop
scripts/: build-appimage-docker.sh  build-appimage.sh  pubspec_lock_json.py
src/tb_fitgirl/: bridge.py  cli.py  desktop.py  downloader.py  installer.py  metadata.py  models.py  steam.py  torbox.py
src/tb_fitgirl/scrapers/: __init__.py  base.py  fitgirl.py
tests/: test_bridge.py  test_cli.py  test_desktop.py  test_downloader.py  test_installer.py  test_metadata.py  test_models.py  test_scraper_fitgirl.py  test_steam.py  test_torbox.py
